[package]
name = "netstack-lwip"
version = "0.4.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "io-util", "net", "time", "rt", "rt-multi-thread"] }
futures = "0.3"
log = "0.4"
anyhow = "1.0"
bytes = "1"
thiserror = "1"

[build-dependencies]
cc = "1.0"
bindgen = "0.70"

[dev-dependencies]
# End-to-end throughput benchmark uses smoltcp as an in-process, userspace TCP
# peer wired straight to the NetStack Sink/Stream (bare-IP `Medium::Ip`), so no
# TUN device or root is needed. See examples/throughput.rs.
smoltcp = { version = "0.12", default-features = false, features = [
    "std",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
] }
